<resources>
    <string name="app_name">Sports News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artical_title">Artical Title</string>
    <string name="artical_auther">Artical Auther</string>
    <string name="publisher_date">Publisher Date</string>
    <string name="artical_description">Artical Description</string>
    <string name="details">Details</string>
</resources>