<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="20dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/ten"
            android:layout_gravity="center"
            >

            <ImageButton
                android:id="@+id/img_butt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".3"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                style="@style/text_title"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_margin="@dimen/ten"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginLeft="@dimen/ten"
                android:layout_weight=".7"
                android:text="Articles details"
                android:textColor="@color/whigt" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_detail_news"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/color" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/artical_title"
       style="@style/text_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_published_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_news" />

    <TextView
        android:id="@+id/tv_auther"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/artical_auther"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_published_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/publisher_date"
        app:layout_constraintBottom_toBottomOf="@+id/tv_auther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_auther"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_auther"
        app:layout_constraintVertical_bias="0.065" />


    <TextView
        android:id="@+id/tv_artical_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginLeft="@dimen/sixteen"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/artical_description"
        style="@style/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginBottom="@dimen/ten"
        android:text="@string/details"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_artical_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>
